Kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivolve-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ivolve-app
  template:
    metadata:
      labels:
        app: ivolve-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: ivolve-app
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: ivolve-app
          image: abdulrahman1235/python-app:latest
          ports:
            - containerPort: 80
