Kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivolve-ingress
  namespace: ivolve
spec:
  rules:
    - host: ivolve.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ivolve-service
                port:
                  number: 80
